--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="./assets/images/ice creame.jpeg" usemap="#image-map">
+    <img src="./ice creame.jpeg" usemap="#image-map">
 
 <map name="image-map">
     <area target="_blank" href="./icecream.html" coords="38,7,124,139" shape="rect">
